feat: lottery record service api
